@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="3"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="19"
+VERSION_BUILD="20"
 
 # $Log$
+#
+# BUILD : 1.3.0.20 (SVN)
+# BUGS  : 371,373
+# NOTES : Fixed kicked users not being removed from count and ison. Optimized sql on chan part a bit. Small fix in nick tracking queries.
 #
 # BUILD : 1.3.0.19 (SVN)
 # BUGS  : N/A
