@@ -269,6 +269,7 @@ Provided by Nomad Dev. <dev@nomadirc.net> - 2005
 08/05 F Fixed maxvalues setting on clean installs.                [#122]
 
 Provided by Hal9000 <hal9000@pimpmylinux.org>
+01/10 F Fixed kicked users not being removed from count and ison  [#371]
 01/08 F Fixed except support in P10 burst function                [ #00]
 01/08 F Fixed channel bans not parsed correctly on P10 burst      [ #00]
 01/08 F Fixed version replies not handled correctly in nefarious  [ #00]
